New folder/open-interpreter/codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__model_picker_refresh_preserves_highlight.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
assertion_line: 3465
expression: "render_bottom_popup(&chat, 80)"
---
  Select Model and Effort


› 1. Renamed model                  Older balanced model for straightforward
                                    work.
  2. Shared display name (current)  Legacy coding model.

  enter select · esc back
