New folder/open-interpreter/codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__multi_agent_enable_prompt.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: "render_bottom_popup(&chat, 80)"
---
  Enable subagents?
  Subagents are disabled in this TUI session.


› 1. Yes, enable  Save on the server for new threads. This thread is unchanged.
  2. Not now      Keep subagents disabled.

  enter select · esc back
